Update sdk1.bat